# simple-file-browser

./: .gitignore  README.md  main.py  pyproject.toml
