[project]
name = "simle-file-browser"
version = "0.1.0"
description = "single file, file browser for server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "humanize>=4.12.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
